--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,6 +50,7 @@ workflows:
       # if using Contexts, add your context below
       - orb-tools/publish-dev:
           orb-name: circleci/upx
+          context: orb-publishing
           requires:
             - orb-tools/pack
 
@@ -57,6 +58,7 @@ workflows:
       # dev:${CIRCLE_SHA1:0:7} version of your orb
       - orb-tools/trigger-integration-tests-workflow:
           name: trigger-integration-dev
+          context: orb-publishing
           requires:
             - orb-tools/publish-dev
 
@@ -82,13 +84,13 @@ workflows:
       # e.g. [semver:patch] will cause a patch version to be published.
       - orb-tools/dev-promote-prod-from-commit-subject:
           orb-name: circleci/upx
-
+          context: orb-publishing
           add-pr-comment: true
-          bot-token-variable: GH_BOT_USER_TOKEN
+          bot-token-variable: GHI_TOKEN
           bot-user: cpe-bot
           fail-if-semver-not-indicated: true
           publish-version-tag: true
-          ssh-fingerprints: x
+          ssh-fingerprints: ea:5e:3a:c4:c9:5a:93:ab:0d:37:86:58:d4:f8:08:89
           requires:
             - integration-test-1
           filters:
