--- a/src/@orb.yml
+++ b/src/@orb.yml
@@ -6,3 +6,4 @@ description: >
 # This information will be displayed in the orb registry and is not mandatory.
 display:
   source_url: "https://github.com/CircleCI-Public/UPX-orb"
+  homepage: "https://upx.github.io/"
